# accountable-api

./: .env  .flake8  .gitignore  README.md  alembic.ini  main.py  nixpacks.toml  pyproject.toml  railway.json
.cursor/rules/: postgres-sql-style-guide.mdc  prefs.mdc
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: a1eee3a0bbe5_initial_schema_setup_from_models.py
app/api/: dependencies.py
app/api/endpoints/: health.py  organizations.py  users.py
app/core/: config.py
app/db/: session.py
app/managers/: __init__.py  base_manager.py  clerk_manager.py  organization_manager.py  user_manager.py
app/models/: __init__.py  base.py  organization.py  organization_member.py  user.py
app/schemas/: health.py  organization.py  user.py
app/services/: health.py  user.py
app/utils/: redis.py  supabase.py
scripts/: repl.py
supabase/: config.toml
supabase/migrations/: 20240324013500_initial_schema.sql
