[tool.poetry]
name = "app"
version = "1.0.0"
description = "FastAPI backend for the Accountable application"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^3.6.2"
click = "^8.1.3"
fastapi = "0.115.12"
fastapi-limiter = "^0.1.5"
fastapi-cache2 = "^0.2.1"
h11 = "^0.14.0"
httptools = "^0.5.0"
idna = "^3.4"
pydantic = "2.11.1"
python-dotenv = "^1.0.0"
PyYAML = "^6.0"
sniffio = "^1.3.0"
starlette = "^0.46.1"
uvicorn = "^0.20.0"
uvloop = "^0.17.0"
watchfiles = "^0.18.1"
websockets = "^11.0"
supabase = "^2.13.0"
email-validator = "^2.1.0"
clerk-backend-api = "^2.0.0"
pydantic-settings = "^2.8.1"
alembic = "^1.15.2"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"

[tool.poetry.scripts]
dev = "main:dev"

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
nest-asyncio = "^1.6.0"
mypy = "^1.15.0"
flake8 = "^7.2.0"

[tool.mypy]
packages = ["app"]
namespace_packages = false
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
